packages/babel-core/test/fixtures/errors/error-config-file-more-frames/babel.config.js
g();

module.exports = function myConfig() {
};

function f() {
  throw new Error("Error inside config!");
}

function g() {
  f();
}
